Shader Light output of mesh object leads to crash with Eevee #99104

Closed
opened 2022-06-23 11:08:50 +02:00 by RUben · 14 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c

Short description of error
Shader Light output of mesh object leads to crash with Eevee

Exact steps for others to reproduce the error
Change Material output for mesh object to Light output

Light_output.blend

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` **Short description of error** Shader Light output of mesh object leads to crash with Eevee **Exact steps for others to reproduce the error** Change Material output for mesh object to Light output [Light_output.blend](https://archive.blender.org/developer/F13220236/Light_output.blend)
Author

Added subscriber: @RUben

Added subscriber: @RUben
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Crash appear to be fixed in 3.3. So can you please check again in 3.3 build?: https://builder.blender.org/download/daily
I'll search for the commit which has solved the crash in master branch.

Hi, thanks for the report. Crash appear to be fixed in 3.3. So can you please check again in 3.3 build?: https://builder.blender.org/download/daily I'll search for the commit which has solved the crash in master branch.
Member

I forgot about this report. Raising the priority so it won't slip before the corrective release

Will find the fix today

I forgot about this report. Raising the priority so it won't slip before the corrective release Will find the fix today
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

a337e7738f fixes the crash in master
Not sure if backporting this commit would be appropriate (But fixing this is still important since it's easy to repro)
@JacquesLucke , can you comment?

a337e7738f fixes the crash in master Not sure if backporting this commit would be appropriate (But fixing this is still important since it's easy to repro) @JacquesLucke , can you comment?
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

In master branch crash was originally introduced with 80859a6cb2
So also tagging @fclem

In master branch crash was originally introduced with 80859a6cb2 So also tagging @fclem
Member

I don't understand how a337e7738f could fix anything, it might just hide the bug for you. In fact, in a debug build, master still crashes for me when I open this file.

I don't understand how a337e7738f could fix anything, it might just hide the bug for you. In fact, in a debug build, master still crashes for me when I open this file.
Member

Yes, In debug build I can still repro the crash (even with WITH_ASSERT_ABORT:BOOL=OFF)
So as you said, that commit is hiding the crash in release builds

Yes, In debug build I can still repro the crash (even with `WITH_ASSERT_ABORT:BOOL=OFF`) So as you said, that commit is hiding the crash in release builds

This issue was referenced by f2a7be6e75

This issue was referenced by f2a7be6e75db35f7d1945e4a0d443c0120f7b8cb

This issue was referenced by 4a9f60ecd2

This issue was referenced by 4a9f60ecd291254ad32854b945c673dfc1e12137

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2022-06-29 14:12:38 +02:00
Thomas Dinges added this to the 3.2 milestone 2023-02-08 15:51:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99104
No description provided.