source/blender/nodes/shader/nodes/node_shader_output_light.cc
@@ -10,6 +10,22 @@ static void node_declare(NodeDeclarationBuilder &b)
   b.add_input<decl::Shader>(N_("Surface"));
 }
 
+static int node_shader_gpu_output_light(GPUMaterial *mat,
+                                        bNode *UNUSED(node),
+                                        bNodeExecData *UNUSED(execdata),
+                                        GPUNodeStack *in,
+                                        GPUNodeStack *UNUSED(out))
+{
+  GPUNodeLink *outlink_surface;
+  /* Passthrough node in order to do the right socket conversions. */
+  if (in[0].link) {
+    /* Reuse material output. */
+    GPU_link(mat, "node_output_material_surface", in[0].link, &outlink_surface);
+    GPU_material_output_surface(mat, outlink_surface);
+  }
+  return true;
+}
+
 }  // namespace blender::nodes::node_shader_output_light_cc
 
 /* node type definition */
@@ -21,6 +37,8 @@ void register_node_type_sh_output_light()
 
   sh_node_type_base(&ntype, SH_NODE_OUTPUT_LIGHT, "Light Output", NODE_CLASS_OUTPUT);
   ntype.declare = file_ns::node_declare;
+  node_type_gpu(&ntype, file_ns::node_shader_gpu_output_light);
+
   ntype.no_muting = true;
 
   nodeRegisterType(&ntype);
